fixed y scrollbar showing issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,19 @@ html {
     color: '#f1f1f1';
 }
 
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
+
 
 body {
     background-color: '#EFEFEF';
